[package]
name= "JASH"
version= "0.1.2"
edition= "2024"
authors= ["MuteAvery"]
description= "Just Another Shell handler, name speaks for its self this is a shell handler made for CTFs linux boot2roots"
license= "LICENSE"
[dependencies]
colored = "3.0"
termion = "=1.5.6"
termios = "0.3"
nix = { version = "0.27", features = ["fs"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
